--- a/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
+++ b/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
@@ -24,6 +24,7 @@
             </NavLink>
         </div>
 
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
@@ -37,7 +38,13 @@
         </div>
 
         <AuthorizeView>
+
             <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="calendar">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Calendar
+                    </NavLink>
+                </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
