Added o popup window for workouts (calendar page)

--- a/psk_fitness/psk_fitness/Components/Pages/Weather.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Weather.razor
@@ -1,5 +1,7 @@
 ﻿@page "/weather"
 @attribute [StreamRendering]
+@using BlazorBootstrap;
+
 
 <PageTitle>Weather</PageTitle>
 
@@ -38,6 +40,7 @@ else
 
 @code {
     private WeatherForecast[]? forecasts;
+    private Modal modal = default!;
 
     protected override async Task OnInitializedAsync()
     {
