--- a/psk_fitness/psk_fitness.Client/Shared/Dropdown.razor
+++ b/psk_fitness/psk_fitness.Client/Shared/Dropdown.razor
@@ -1,5 +1,36 @@
-﻿<h3>Dropdown</h3>
+﻿@using Microsoft.AspNetCore.Components.Web
+@typeparam TItem
+<div class="dropdown" id="@Id">
+    <button class="btn btn-primary dropdown-toggle mr-4" data-toggle="dropdown" type="button" @onclick="e => this.show=!this.show "
+            aria-haspopup="true" aria-expanded="false">
+        @Tip
+    </button>
+    <CascadingValue name="Dropdown" Value="@this">
+        <div class="dropdown-menu @(show? "show":"")">
+            @ChildContent
+        </div>
+    </CascadingValue>
+</div>
 
 @code {
+    [Parameter]
+    public string Id { get; set; }
+    [Parameter]
+    public RenderFragment InitialTip { get; set; }
+    [Parameter]
+    public RenderFragment ChildContent { get; set; }
+    [Parameter]
+    public EventCallback<TItem> OnSelected { get; set; }
 
+    private bool show = false;
+    private RenderFragment Tip;
+
+    protected override void OnInitialized() { this.Tip = InitialTip; }
+    public async Task HandleSelect(TItem item, RenderFragment<TItem> contentFragment)
+    {
+        this.Tip = contentFragment.Invoke(item);
+        this.show = false;
+        StateHasChanged();
+        await this.OnSelected.InvokeAsync(item);
+    }
 }
