Added link in nav and topics grid

--- a/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
+++ b/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
@@ -32,6 +32,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="topics">
+                <span aria-hidden="true">Topics</span>
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
