--- a/psk_fitness/psk_fitness/Components/Pages/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Topics.razor
@@ -4,6 +4,21 @@
 
 <h3>Topics</h3>
 
+<div class="d-flex flex-column">
+    <div class="d-flex align-items-center">
+        <div class="dropdown me-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Personal
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Personal</a></li>
+                <li><a class="dropdown-item" href="#">Invited</a></li>
+            </ul>
+        </div>
+        <button class="btn btn-primary" type="button">New topic</button>
+    </div>
+</div>
+
 <div class="container">
     <div class="row">
         @foreach (var item in Enumerable.Range(1, 12))
