--- a/psk_fitness/psk_fitness/Components/Pages/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Topics.razor
@@ -15,7 +15,60 @@
                 <li><a class="dropdown-item" href="#">Invited</a></li>
             </ul>
         </div>
-        <button class="btn btn-primary" type="button">New topic</button>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal">
+          New topic
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="newTopicModal" tabindex="-1" aria-labelledby="newTopicModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="newTopicModalLabel">New topic</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="topicTitle" class="form-label">Title</label>
+                                <input type="text" class="form-control" id="topicTitle" placeholder="Enter topic title">
+                            </div>
+                            <div class="mb-3">
+                                <label for="topicDescription" class="form-label">Description</label>
+                                <textarea class="form-control" id="topicDescription" rows="3" placeholder="Enter topic description"></textarea>
+                            </div>
+                            <div class="mb-3">
+                                <label for="topicColor" class="form-label">Color</label>
+                                <div class="d-flex flex-wrap gap-2">
+                                    @foreach (var color in PredefinedTopicColors) {                                        
+                                        <button @onclick:preventDefault=true @onclick="HandleColorSelection" class="color-circle" style="background-color: @color"></button>
+                                    }
+                                </div>
+                                <input type="hidden" id="topicColor" name="topicColor">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <button type="button" class="btn btn-primary">Create</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <style>
+            .color-circle {
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                border: 1px solid black;
+                cursor: pointer;
+            }
+            
+
+            .selected {
+                border: 2px solid black;
+            }
+        </style>
     </div>
 </div>
 
@@ -37,5 +90,11 @@
 
 
 @code {
+    public List<String> PredefinedTopicColors {get; set;}
+        = new(){"red", "green", "blue"};
 
+    private void HandleColorSelection()
+    {
+        PredefinedTopicColors.Add("pink");
+    }
 }
