--- a/psk_fitness/psk_fitness/Components/Calendar/Pages/Modal.razor.css
+++ b/psk_fitness/psk_fitness/Components/Calendar/Pages/Modal.razor.css
@@ -15,3 +15,9 @@
     border: 1px solid #222222;
     color: #222222;
 }
+
+.edit-button {
+    background-color: #FFA500;
+    border-color: #FFA500;
+    color: #222222;
+}
