--- a/psk_fitness/psk_fitness/Components/Pages/Topics/CreateTopic.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Topics/CreateTopic.razor
@@ -5,39 +5,39 @@
 
 <!-- Modal -->
 <div class="modal fade" id="newTopicModal" tabindex="-1" aria-labelledby="newTopicModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style=@($"background-color: {_createTopicModel.Color}")>
-        <div class="modal-content" style=@($"background-color: {_createTopicModel.Color}")>
-            <div class="modal-header" style=@($"background-color: {_createTopicModel.Color}")>
+    <div class="modal-dialog">
+        <div class="modal-content" style=@($"background-color: {CreateTopicModel.Color}")>
+            <div class="modal-header">
                 <h5 class="modal-title" id="newTopicModalLabel">New topic</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <EditForm Model="_createTopicModel" OnSubmit="OnSubmit">
+            <EditForm Model="CreateTopicModel" OnSubmit="OnSubmit" FormName="CreateTopicForm">
+                <div class="modal-body">
                     <div class="mb-3">
                         <label for="topicTitle" class="form-label">Title</label>
-                        <InputText @bind-Value=_createTopicModel.Title class="form-control" id="topicTitle" placeholder="Enter topic title" />
+                        <InputText @bind-Value=CreateTopicModel.Title class="form-control" id="topicTitle" placeholder="Enter topic title" />
                     </div>
                     <div class="mb-3">
                         <label for="topicDescription" class="form-label">Description</label>
-                        <InputTextArea @bind-Value=_createTopicModel.Description class="form-control" id="topicDescription" rows="3"
+                        <InputTextArea @bind-Value=CreateTopicModel.Description class="form-control" id="topicDescription" rows="3"
                             placeholder="Enter topic description"></InputTextArea>
                     </div>
                     <div class="mb-3">
                         <label for="topicColor" class="form-label">Color</label>
-                        <InputRadioGroup @bind-Value=_createTopicModel!.Color class="d-flex flex-wrap gap-2">
+                        <InputRadioGroup @bind-Value=CreateTopicModel!.Color class="d-flex flex-wrap gap-2">
                             @foreach (string color in _availableTopicColors)
                             {
-                                <InputRadio Value=color @onchange=HandleColorSelection class="color-circle"
+                                <InputRadio Value=color class="color-circle"
                                     style=@($"background-color: {color}")>
                                 </InputRadio>
                             }
                         </InputRadioGroup>
                     </div>
-                </EditForm>
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button type="submit" value="Submit" class="btn btn-primary">Create</button>
-            </div>
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="submit" value="Submit" class="btn btn-primary">Create</button>
+                </div>
+            </EditForm>
         </div>
     </div>
 </div>
@@ -64,13 +64,27 @@
 
 @code {
 
-    private class CreateTopicData {
+    public class CreateTopicData {
         public string? Title {get; set;}
         public string? Description {get; set;}
         public string? Color {get; set;}
     }
 
-    private CreateTopicData _createTopicModel = new();
+    private CreateTopicData _createTopicModel;
+
+    [SupplyParameterFromForm]
+    public CreateTopicData CreateTopicModel {
+        get { return _createTopicModel; }
+        set {
+            _createTopicModel = value;
+            Console.WriteLine("color from setter: "+_createTopicModel.Color);
+        }
+    }
+
+        protected override void OnInitialized()
+    {
+        _createTopicModel ??= new();
+    }
 
     private List<string> _availableTopicColors { get; set; }
     = new() {"red", "green", "blue"};
