Set Topics creation run on InteractiveServer

--- a/psk_fitness/psk_fitness/Components/Topics/CreateTopic.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/CreateTopic.razor
@@ -1,4 +1,5 @@
-﻿<!-- Button trigger modal -->
+﻿@rendermode InteractiveServer
+<!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal">
     New topic
 </button>
